--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,7 +1,7 @@
 ---
 - name: Add Mongo Repo
   yum_repository:
-    name: "[mongodb-org-{{ mongo_version | regex_replace('^([0-9])\\.([0-9]*).*', '\\1.\\2') }}]"
+    name: "mongodb-org-{{ mongo_version | regex_replace('^([0-9])\\.([0-9]*).*', '\\1.\\2') }}"
     description: MongoDB Repository
     baseurl: "https://repo.mongodb.org/yum/redhat/$releasever/mongodb-org/{{ mongo_version | regex_replace('^([0-9])\\.([0-9]*).*', '\\1.\\2') }}/x86_64/"
     gpgkey: "https://www.mongodb.org/static/pgp/server-{{ mongo_version | regex_replace('^([0-9])\\.([0-9]*).*', '\\1.\\2') }}.asc"
